# FfmpegShareLib

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/soul/learn/ffmpegsharelib/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: aacUtils.cpp  aacUtils.h  flvUtils.cpp  flvUtils.h  h264Utils.cpp  h264Utils.h  liveStreamImlp.c  liveStreamImlp.h  liveStreamImlp2.c  muxtemp.c.c  native-lib.cpp  pcmUtils.cpp  pcmUtils.h  simplest_ffmpeg_streamer.c  simplest_ffmpeg_streamer.h  udpRtpUtils.cpp  udpRtpUtils.h  yuvRgbUtils.cpp  yuvRgbUtils.h
app/src/main/cpp/ffmpegUtil/: h264encode.cpp  h264encode.h  muxing.c  muxing.h  muxing3.c
app/src/main/java/com/soul/learn/ffmpegsharelib/: MainActivity.java  ShareApplication.java
app/src/main/java/com/soul/learn/ffmpegsharelib/jniUtils/: FfmpegStreamUtils.java  StreamHelper.java  YuvUtils.java
app/src/main/java/com/soul/learn/ffmpegsharelib/ui/: LiveActivity.java
app/src/main/res/layout/: activity_live.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/soul/learn/ffmpegsharelib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
